# total-perspective-vortex

./: .gitignore  README.md  README_pipeline.md  pyproject.toml  requirements.txt  test_pipeline.py
src/: main.py  pipeline_demo.py  preprocessing_pipeline.py
